fix(Placeholder): stretched height: 100%; - fixes #5556

--- a/packages/vkui/src/components/Placeholder/Placeholder.module.css
+++ b/packages/vkui/src/components/Placeholder/Placeholder.module.css
@@ -15,6 +15,7 @@
   flex: 1 0;
   padding-top: inherit;
   padding-bottom: inherit;
+  height: 100%;
 }
 
 .Placeholder__icon {
